# web-1-best-bag

./: LICENSE  README.md  SignIn.js  gio-hang.csv  gio-hang.json  hoa-don.csv  hoa-don.json  imagelinks.txt  index.html  jsconfig.json  loading.js  locin.html  login.html  lynvn.csv  lynvn.json  main.js  nguoi-dung.csv  nguoi-dung.json  pyproject.toml  san-pham.csv  style.css  tao-du-lieu.py  the-loai.csv  the-loai.json
.github/workflows/: static.yml
Data/: gio-hang.csv  gio-hang.json  hoa-don.csv  hoa-don.json  imagelinks.txt  nguoi-dung.csv  nguoi-dung.json  san-pham.csv  san-pham.json  tao-du-lieu.py
NavBar/: link-navbar.js  navbar.html  sidebar.html
Product/ChiTietSanPham/: ChiTietSanPham.css  ChiTietSanPham.html  ChiTietSanPham.js  pa.html  pa.js
Product/ThemSuaXoa/: ThemSuaXoaSP.css  ThemSuaXoaSP.html  ThemSuaXoaSP.js  adminthemsuaxoa.css  adminthemsuaxoa.js  pra.html  pra.js
User/: AccountUser.html
User/Auth/: SignIn.js  SignUp.js  login.html
User/Profile/: AccountUser.html  AccountUser.js
admin/: admin.css  admin.html  admin.js  bieudo-test.html  bieudo-test.js  bieudo-test.xml  bieudo.html  bieudo.js  hoadon.html  hoadon.xml  nguoidung.html  nguoidung.xml  sanpham.html  sanpham.xml  test.html  thongke-test.js  thongke.html  thongke.js  thongke.xml  tktgv18.json  ttsp.css  ttsp.html
home_page/: homepage_new.html
home_page/css/: style.css
home_page/js/: homeMain.js
images/: banner2.jfif  banner3.jfif
