[tool.poetry]
name = "web-1-best-bag"
version = "0.1.0"
description = "random du lieu"
authors = ["bhbghghbgb <113711814+bhbghghbgb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
faker = "^33.0.0"
unidecode = "^1.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"